- fixes, improvements and propagated the changes in the framework spec to the generator - added a transform method to the generator config spec, this is called after all prompts are done, the answers can be transformed here - also allow the src path in the writing config to be a template

--- a/generators/app/templates/riot/riot.ejs
+++ b/generators/app/templates/riot/riot.ejs
@@ -1,7 +1,7 @@
-<<%= tag.name%>>
+<<%= riot.name%>>
 
   <div>
-    A brand new tag called <%= tag.name %>!
+    A brand new riot tag called <%= riot.name %>!
   </div>
 
   <script>
@@ -9,4 +9,4 @@
     // this.model = opts.model;
   </script>
 
-</<%= tag.name%>>
+</<%= riot.name%>>
