added react to view adapters

--- a/generators/app/templates/view/view.ejs
+++ b/generators/app/templates/view/view.ejs
@@ -1,6 +1,7 @@
 import template from '<%= view.template.path %>';
 
 const <%= view.name %> = {
+  adapter: '<%= view.adapter %>',
   template
 };
 
